--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,9 +1,9 @@
 {
     "type": "mysql",
     "host": "localhost",
-    "port": 3306,
+    "port": 3360,
     "username": "root",
-    "password": "alunos",
+    "password": "root",
     "database": "lllcommerce",
     "entities": ["src/modules/**/infra/typeorm/entities/*.ts"],
     "migrations": ["src/shared/infra/typeorm/migrations/*.ts"],
