--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "express": "^4.17.2",
-    "mysql": "^2.18.1",
+    "express-async-errors": "^3.1.1",
+    "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.4.0",
     "typeorm": "^0.2.41"
